Fix article overflow

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -100,6 +100,7 @@
   grid-row: 3 / 5;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 15px;
+  overflow: scroll;
 }
 
 .article .card {
